[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.3",
    "cryptg>=0.5.2",
    "flask>=3.1.2",
    "gunicorn>=23.0.0",
    "pillow>=12.1.0",
    "python-dotenv>=1.2.1",
    "python-telegram-bot>=22.5",
    "qrcode>=8.2",
    "requests>=2.32.5",
    "telethon>=1.42.0",
]
